<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ar">Arabic</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>
    <string name="ru">Русский</string>
    <string name="app_name">РИА чат</string>
    <string name="new_message">New message</string>
    <string name="path_expand_less">M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z</string>
    <string name="action_exit">Выйти</string>
    <string name="fullNamePrompt">Ф.И.О.</string>
    <string name="nicknamePrompt">Псевдоним</string>
    <!-- Комната используется в том же смысле, что и комната в помещении. При переводе примера псевдонима использовать устоявщиеся формы примеров имен для каждого языка, например, для английского, это может быть John Smith или John Doe. -->
    <string name="nicknameHint">Данное поле будет использоваться в многопользовательских чатах (комнатах). Мы настоятельно рекомендуем использовать Ваши настоящие имя и фамилию, чтобы остальным участникам комнаты было понятно, кто Вы, например, Иванов Иван или Иванов И. И.</string>
    <string name="loginPrompt">Логин</string>
    <string name="passwordPrompt">Пароль</string>
    <string name="authorizationFormMessage">Внутренний специализированный мессенджер с доступом только для сотрудников МИА Россия Сегодня</string>
    <string name="Sign_in">Войти</string>
    <string name="chats">Чаты</string>
    <string name="rooms">Команты</string>
    <string name="groups">Группы</string>
    <string name="contacts">Контакты</string>
    <string name="rosterUpdateMessage">Идет обновление списка..</string>
    <string name="emptyChatHistoryMessage">История переписки отсутствует</string>
    <string name="destroyChatAlertTitle">Удалить чат и историю переписки?</string>
    <string name="destroyAlertCancel">Нет</string>
    <string name="destroyAlertConfirm">Да</string>
    <string name="emptyRoomHistoryMessage">Список доступных комнат пуст</string>
    <string name="lastRoomMessageFromYou">Вы</string>
    <string name="multiuserRoom">Групповой чат</string>
    <string name="InviteToMUC">Пригласить в комнату</string>
    <string name="mucRoomName">Название новой комнаты</string>
    <string name="roomCreationMessage">Идёт создание комнаты</string>
    <string name="roomCreationError">Ошибка создания комнаты</string>
    <string name="editMucRoom">Редактирование комнаты</string>
    <string name="destroyRoom">Удалить комнату</string>
    <string name="destroyRoomAlertTitle">Удаление комнаты</string>
    <string name="destroyRoomAlertMsg">Комната будет удалена полностью. Продолжать?</string>
    <string name="dataLossAlertTitle">Данные будут утеряны</string>
    <string name="dataLossAlertMessage">Перейти к сообщению?</string>
    <string name="dataLossAlertCancel">Нет</string>
    <string name="dataLossAlertConfirm">Да</string>
    <string name="authorizationInProgress">Идёт авторизация...</string>
    <string name="connectionFailure">Не удалось подключиться к серверу. Проверьте подключение к сети и попробуйте еще раз</string>
    <string name="authorizationFailure">Ошибка авторизации. Попробуйте ещё раз</string>
</resources>