<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/russia_logo"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="40dp"
                android:src="@color/dark_blue" />

            <ImageView
                android:paddingBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo_russia" />
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/lang_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="24dp"
            android:scaleType="center"
            android:src="@drawable/ru"
            app:backgroundTint="@color/transparent"
            app:fabSize="mini" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/russia_logo"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/edit_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.malinskiy.materialicons.widget.IconTextView
                    style="@style/LoginViewIconImage"
                    android:text="{zmdi-face}" />

                <EditText
                    android:id="@+id/name_edit_text"
                    style="@style/CredentialsEditText"
                    android:hint="@string/nicknamePrompt"
                    android:inputType="textCapWords">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.malinskiy.materialicons.widget.IconTextView
                    style="@style/LoginViewIconImage"
                    android:text="{zmdi-account-circle}" />

                <EditText
                    android:id="@+id/login_edit_text"
                    style="@style/CredentialsEditText"
                    android:hint="@string/loginPrompt">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.malinskiy.materialicons.widget.IconTextView
                    style="@style/LoginViewIconImage"
                    android:text="{zmdi-lock}" />

                <EditText
                    android:id="@+id/password_edit_text"
                    style="@style/CredentialsEditText"
                    android:hint="@string/passwordPrompt"
                    android:imeActionLabel="@string/Sign_in"
                    android:inputType="textPassword" />

            </LinearLayout>

            <ProgressBar
                style="@style/RiaProgressBar"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:orientation="horizontal">

                <com.malinskiy.materialicons.widget.IconTextView
                    style="@style/LoginViewIconImage"
                    android:text="{zmdi-shield-check}" />

                <com.devspark.robototextview.widget.RobotoTextView
                    style="@style/CredentialsText"
                    android:text="@string/authorizationFormMessage" />
            </LinearLayout>

            <com.devspark.robototextview.widget.RobotoButton
                android:id="@+id/enter_button"
                android:layout_width="@dimen/enter_button_width"
                android:layout_height="@dimen/enter_button_height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_selector"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/Sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/top_bar_button_text_size" />

        </LinearLayout>


    </ScrollView>


    <RelativeLayout style="@style/AppMessageView" />

</RelativeLayout>
